internal/gatewayapi/testdata/extensions/extensionpolicy-with-gatewayclass-target-not-merged.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http1
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
extensionServerPolicies:
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: test1
    namespace: envoy-gateway
  spec:
    targetRef:
      kind: GatewayClass
      group: gateway.networking.k8s.io
      name: envoy-gateway-class
    data: "should be rejected because mergeGateways is not enabled"
